--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <input type="text" name="task-name" placeholder="Enter Task Name" />
             </div>
             <div class="form-group">
-                <select name="task-type">
+                <select name="task-type" class="select-dropdown">
                     <option value="" disabled selected>Pick a task type</option>
                     <option value="Print">Print</option>
                     <option value="Web">Web</option>
