--- a/index.html
+++ b/index.html
@@ -32,9 +32,22 @@
     </header>
 
     <main class="page-content">
+        <!-- Tasks to do -->
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks To Do</h2>
             <ul class="task-list" id="tasks-to-do"></ul>
+        </section>
+
+        <!-- Tasks in progress -->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks In Progress</h2>
+            <ul class="task-list" id="tasks-in-progress"></ul>
+        </section>
+
+        <!-- Tasks completed -->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks Completed</h2>
+            <ul class="task-list" id="tasks-completed"></ul>
         </section>
     </main>
 
